--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/bottom-tabs": "^5.2.4",
     "@react-navigation/native": "^5.1.3",
+    "@react-navigation/stack": "^5.2.8",
     "expo": "~36.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -19,9 +20,10 @@
     "react-native-gesture-handler": "~1.5.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
-    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-screens": "^2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.3.2"
+    "react-navigation": "^4.3.4",
+    "react-navigation-stack": "^2.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
