--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "google-distance": "^1.0.1",
+    "mongoose-auto-increment-with-decrement": "^5.0.1",
     "nodemon": "^2.0.2"
   }
 }
