--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "availability-schedule": "^1.0.2",
     "express": "^4.17.1",
     "google-distance": "^1.0.1",
     "mongoose-auto-increment-with-decrement": "^5.0.1",
