--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-image-slider-box": "^1.0.12",
+    "react-native-modal-datetime-picker": "^8.5.4",
     "react-native-numeric-input": "^1.8.3",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
