--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-google-places-autocomplete": "^1.4.1",
     "react-native-image-slider-box": "^1.0.12",
     "react-native-modal-datetime-picker": "^8.5.4",
     "react-native-numeric-input": "^1.8.3",
