--- a/client/package.json
+++ b/client/package.json
@@ -9,37 +9,37 @@
   },
   "dependencies": {
     "@expo/react-native-image-gallery": "^3.1.0",
-    "@react-native-community/datetimepicker": "2.1.0",
-    "@react-native-community/masked-view": "0.1.5",
+    "@react-native-community/datetimepicker": "2.2.2",
+    "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/bottom-tabs": "^5.2.4",
     "@react-navigation/native": "^5.1.3",
     "@react-navigation/stack": "^5.2.8",
     "@use-expo/font": "^2.0.0",
-    "expo": "~36.0.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "expo": "^37.0.0",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-calendars": "^1.265.0",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "~1.5.0",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-google-places-autocomplete": "^1.4.1",
     "react-native-image-slider-box": "^1.0.12",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal-datetime-picker": "^8.5.4",
     "react-native-numeric-input": "^1.8.3",
     "react-native-paper": "^3.8.0",
-    "react-native-reanimated": "~1.4.0",
-    "react-native-safe-area-context": "0.6.0",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-safe-area-context": "0.7.3",
     "react-native-safe-area-view": "^1.0.0",
-    "react-native-screens": "^2.0.0-alpha.12",
+    "react-native-screens": "~2.2.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "~0.11.7",
+    "react-native-web": "^0.11.7",
     "react-navigation": "^4.3.4",
     "react-navigation-stack": "^2.3.12"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-preset-expo": "~8.0.0"
+    "babel-preset-expo": "^8.1.0"
   },
   "private": true
 }
