--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "expo": "^37.0.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
+    "react-feather": "^2.0.8",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-calendars": "^1.265.0",
     "react-native-elements": "^1.2.7",
