--- a/client/package.json
+++ b/client/package.json
@@ -32,10 +32,12 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "~2.2.0",
+    "react-native-star-rating": "^1.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.3.4",
-    "react-navigation-stack": "^2.3.12"
+    "react-navigation-stack": "^2.3.12",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
