--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "google-distance": "^1.0.1",
     "mongoose": "^5.9.7",
     "mongoose-auto-increment-with-decrement": "^5.0.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "socket.io": "^2.3.0"
   }
 }
