--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^5.2.8",
     "@use-expo/font": "^2.0.0",
     "expo": "^37.0.0",
+    "expo-permissions": "~8.1.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-feather": "^2.0.8",
