--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-feather": "^2.0.8",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-calendars": "^1.265.0",
+    "react-native-dialog": "^5.6.0",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-google-places-autocomplete": "^1.4.1",
