--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.19.0"
+  },
+  "dependencies": {
+    "expo": "^37.0.12"
   }
 }
