--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "mongoose-auto-increment-with-decrement": "^5.0.1",
     "node-fetch": "^2.6.0",
     "nodemon": "^2.0.2",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "unique-string": "^2.0.0"
   }
 }
