--- a/client/config/config.json
+++ b/client/config/config.json
@@ -1,4 +1,4 @@
 {
     "ioServer": "http://ede143674b92.ngrok.io",
-    "API":"http://localhost:3000"
+    "API": "https://parkngoproj.herokuapp.com"
 }
