fix socket and upadte mongo

--- a/client/config/config.json
+++ b/client/config/config.json
@@ -1,4 +1,4 @@
 {
-    "ioServer": "http://ede143674b92.ngrok.io",
+    "ioServer": "https://parkngoproj.herokuapp.com",
     "API": "https://parkngoproj.herokuapp.com"
 }
