--- a/client/app.json
+++ b/client/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Blank Template",
+    "name": "Parkngo",
     "slug": "client",
     "privacy": "public",
     "platforms": [
@@ -24,6 +24,10 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "package": "com.parkngo.parkngo",
+      "versionCode": 1
     }
   }
 }
